--- a/ClientReservasi-086/ClientReservasi-086.csproj
+++ b/ClientReservasi-086/ClientReservasi-086.csproj
@@ -62,10 +62,25 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Register.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Register.Designer.cs">
+      <DependentUpon>Register.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,6 +91,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Register.resx">
+      <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Connected Services\ServiceReference1\ClientReservasi_086.ServiceReference1.PemesananResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -86,9 +104,13 @@
     <None Include="Connected Services\ServiceReference1\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServiceReference1\ServiceReservasi.xsd">
+    <None Include="Connected Services\ServiceReference1\service2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\DataSources\CekLokasi.datasource" />
+    <None Include="Properties\DataSources\DataRegister.datasource" />
+    <None Include="Properties\DataSources\DetailLokasi.datasource" />
+    <None Include="Properties\DataSources\Pemesanan.datasource" />
     <None Include="Properties\DataSources\ServiceReservasi.CekLokasi.datasource" />
     <None Include="Properties\DataSources\ServiceReservasi.DetailLokasi.datasource" />
     <None Include="Properties\DataSources\ServiceReservasi.Pemesanan.datasource" />
